--- a/src/index.css
+++ b/src/index.css
@@ -52,11 +52,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: black;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: darkblue;
 }
 
 body {
