--- a/src/index.css
+++ b/src/index.css
@@ -75,11 +75,9 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -88,7 +86,12 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 1px #747bff
+}
+
+button:active {
+  outline: none;
+  
 }
 
 @media (prefers-color-scheme: light) {
